Fixed Build Error + Removed Whitespace

--- a/src/layout/components/HomePage/style.scss
+++ b/src/layout/components/HomePage/style.scss
@@ -7,7 +7,7 @@
   &-hero {
     background-color: $color-background-grey;
     margin: 1rem -7rem -3rem;
-    padding: 5rem 7rem;
+    padding: 1rem;
   }
 
   &-hero-content {
@@ -51,7 +51,7 @@
   &-cards {
     display: grid;
     gap: 2rem;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     margin-top: 2rem;
     padding: 2rem 0;
   }
@@ -59,7 +59,7 @@
   &-content {
     background-color: $color-tag-white;
     margin: 1rem -7rem -3rem;
-    padding: 3rem 7rem;
+    padding: 0 1rem;
   }
 
   &-link {
