--- a/src/layout/components/MajorCard/style.scss
+++ b/src/layout/components/MajorCard/style.scss
@@ -148,7 +148,7 @@
     background-color: $color-neutrals-white;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
-    padding: 3rem;
+    padding: 0 1rem 1rem 1rem;
   }
 
   &-inner {
